# font-awesome

./: .gitignore  AUTHORS  LICENSE  Makefile  Makefile.am  README  README.md  README.rst  autogen.sh  build-code-coverage-report.sh  configure.ac  font-awesome.py  run-unit-tests.sh  russian_sample.txt  test.php  unicode_sample.txt  version.h.in
debian/: control
m4/: ax_check_icu.m4
src/: AnsiWriter.cxx  AnsiWriter.h  CairoRenderer.cxx  CairoRenderer.h  Color.cxx  Color.h  FilePointer.cxx  FilePointer.h  Font.cxx  Font.h  FontAwesomeException.cxx  FontAwesomeException.h  FontInfo.cxx  FontInfo.h  Glyph.h  Image.cxx  Image.h  ImageWriter.cxx  ImageWriter.h  Makefile.am  PNGWriter.cxx  PNGWriter.h  PangoRenderer.cxx  PixelRenderer.cxx  PixelRenderer.h  Printer.cxx  Printer.h  Renderer.cxx  Renderer.h  font-awesome.c  glyphtest.cxx  main.cxx
tests/: ColorTest.cxx  ImageTest.cxx  Makefile.am  test.php
